Issue #10459: Update CJK character names to Unicode 6.0.